--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./assets/favicon/favicon_io/android-chrome-192x192.png" />
+    <link rel="icon" href="./assets/favicon/favicon_io/android-chrome-512x512.png" />
+    <link rel="icon" href="./assets/favicon/favicon_io/favicon-16x16.png" />
+    <link rel="icon" href="./assets/favicon/favicon_io/favicon-32x32.png" />
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
